tools/tests/errors/surf_lib_15.ki
# Opening a nonexistent file for reading must throw.
var io = import("io")
discard io.open("/nonexistent/path/file_xyz_abc.txt", "r")
